2008-08-12  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-index.c (indexer_update_word): Improve
	performance CPU-wise when inserting words into the index. Perform
	binary searches on previous hits, since insertions are guaranteed to
	be ordered. Shift array over deleted values with g_memmove().

2008-08-12  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-keywords.c: Propagating errors coming from
	the indexer, instead overwrite them in the daemon.
	
2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-dbus.c: Don't resume indexing after the
	dbus request without checking if we are manually paused or paused
	for IO first.
	
	* src/trackerd/tracker-monitor.c: Make sure we pause when we get
	monitor events from the system.
	
	* src/trackerd/tracker-crawler.c: 
	* src/trackerd/tracker-processor.c: Don't send ANYTHING to the
	indexer or crawl any files while paused from IO as well as manually.
	
	* src/trackerd/tracker-status.c: Make sure we send the right state
	up to the applet about being paused from IO and for being on
	battery. 

2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: Use GStaticPrivate for the private
	data here and make sure we tell the processor to stop now when we
	are given the shutdown signal.

2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: (initialize_databases), (main):
	Fixed some errors in the last commit.

2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-dbus.c: 
	* src/trackerd/tracker-main.[ch]: 
	* src/trackerd/tracker-processor.c: 
	* src/trackerd/tracker-status.[ch]: Hold all valuable states in
	the status module, like is_readonly, is_first_time_index,
	is_running, etc.

2008-08-12  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-db/tracker-db-index